# vcc

./: Cargo.toml  resources.md  shows.db
src/: main.rs  show.rs  shows.rs  shows_db.rs  shows_view.rs  ui_painter.rs
