[package]
name = "vcc"
version = "0.8.4"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
subslice_index = "=0.5.0"
egui = "0.27.0"
eframe = "0.27.0"
memchr = "2.7.2"
sqlite = "0.34.0"

[profile.release]
opt-level = 3
debug = false
split-debuginfo = '...'  # Platform-specific.
debug-assertions = false
overflow-checks = false
panic = 'unwind'
incremental = false
codegen-units = 16
rpath = false
strip = "symbols"
lto = "thin"
