[package]
name = "vcc"
version = "0.12.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
subslice_index = "=0.5.0"
egui = "0.29"
egui_winit_vulkano = { git = "https://github.com/ValliereMagic/egui_winit_vulkano" }
vulkano-util = { version = "0.34", git = "https://github.com/vulkano-rs/vulkano.git"}
vulkano = { version = "0.34", git = "https://github.com/vulkano-rs/vulkano.git"}
winit = { version = "0.30", default-features = false, features = [ "rwh_06" ] }
memchr = "2.7"
sqlite = "0.36"
strumbra = "0.4.1"

[profile.release]
opt-level = 3
debug = false
debug-assertions = false
overflow-checks = false
panic = 'unwind'
incremental = false
codegen-units = 16
rpath = false
strip = "symbols"
lto = "thin"

[profile.instrumented_release]
inherits = "release"
debug = true
strip = "none"
