[package]
name = "vcc"
version = "0.15.1"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
subslice_index = "=0.5.0"
memchr = "2.8.2"
strumbra = "0.6"
eframe = { version = "0.34.3", features = ["default_fonts", "glow", "wayland"], default-features = false }
rusqlite = "0.40.1"

[profile.release]
opt-level = 3
debug = false
debug-assertions = false
overflow-checks = false
panic = 'unwind'
incremental = false
codegen-units = 16
rpath = false
strip = "symbols"
lto = "thin"

[profile.instrumented_release]
inherits = "release"
debug = true
strip = "none"
